--- a/home.html
+++ b/home.html
@@ -77,6 +77,7 @@
         <tr>
           <td>{{ patient.name }}</td>
           <td>{{ patient.age }}</td>
+          <td>{{ patient.gender }}</td>
           <td>{{ patient.diagnosis }}</td>
           <td>
             <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a> 
